<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_gravity="end"
    android:visibility="gone"
    android:id="@+id/PlusMinus_Layout">


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_plus"
        android:id="@+id/PlusIcon_id"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:text="1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/ProductQuantity_id"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_minus"
        android:id="@+id/MinusIcon_id"/>




</LinearLayout>