...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ProductActivity"
    tools:context=".ui.Activities.product_activity.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
...
            android:textStyle="bold" />


    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_Products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:elevation="5dp"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:layout_below="@+id/materialCardView"
...
