<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:contentPadding="5dp"
    android:layout_margin="5dp"
    android:fitsSystemWindows="true"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@color/colorPrimaryDark"
            android:id="@+id/ProductImageView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="Product Name"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:id="@+id/ProductName_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="350 $"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:id="@+id/ProductPrice_id"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:id="@+id/AddToCart_id"
            android:src="@drawable/ic_add_shopping_cart_black_24dp"
            android:layout_marginEnd="10dp"/>

        <include layout="@layout/plus_minus_layout" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>